--- a/asset/style.css
+++ b/asset/style.css
@@ -3,7 +3,7 @@
 body {
     font: 400 16px/1.3 verdana, arial, sans-serif;
     color: #000;
-    background-color: darkgrey;s
+    background-color: darkgrey;
 }
 
 .wrap {
