--- a/asset/style.css
+++ b/asset/style.css
@@ -12,6 +12,23 @@ body {
     margin: 0 auto;
 }
 
+img {
+    width: 100%;
+    height: 17em;
+
+}
+
+/*Entete*/
+
+h1 {
+    float: left;
+    color: white;
+    padding: 15px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
 header {
     height: 50px;
     background-color: black;
@@ -34,6 +51,12 @@ header nav ul li a:hover {
     float: right;
 }
 
+/*Contenu principal*/
+
+.movies .filmtitle {
+    float: left;
+    width: 20%;
+}
 
 .rs {
   float: left;
