--- a/asset/style.css
+++ b/asset/style.css
@@ -14,7 +14,7 @@ body {
 
 img {
     width: 100%;
-    height: 18em;
+    height: 19em;
 
 }
 
@@ -58,6 +58,22 @@ header nav ul li a:hover {
     width: 20%;
 }
 
+/*Page detail*/
+section.affiche {
+    width: 25%;
+    float: left;
+
+}
+
+section.affiche img {
+    width: 100%;
+    height: 50%;
+}
+
+section.description {
+    float: right;
+    width: 70%;
+}
 footer {
   background-color: white;
   height: 200px;
