--- a/asset/style.css
+++ b/asset/style.css
@@ -58,6 +58,53 @@ header nav ul li a:hover {
     width: 20%;
 }
 
+.filtermovies
+{
+  float: left;
+  background-color: #fff;
+  padding: 20px;
+  margin: 20px;
+}
+
+.filtermoviestitle
+{
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.3em;
+  background-color: #000;
+  color: #fff;
+  padding: 5px;
+}
+
+.filtergenres
+{
+  padding: 20px 0;
+}
+
+.checkboxfilter
+{
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+
+}
+
+.checkboxfilter input {
+  position: absolute;
+  cursor: pointer;
+}
+
+.checkboxfilterchoice
+{
+ position: absolute;
+ top: 0;
+ left: 0;
+ height: 25px;
+ width: 25px;
+ background-color: #aaa;
+}
+
 /*Page detail*/
 section.affiche {
     width: 25%;
