--- a/asset/style.css
+++ b/asset/style.css
@@ -146,3 +146,9 @@ footer {
 {
 	background: url('../img/social-icons.png') no-repeat -156px -47px;
 }
+
+.formConnect input {
+    width: 10%;
+    padding: 5px;
+    margin: 20px;
+}
