--- a/asset/style.css
+++ b/asset/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 img {
-    width: 25%;
+    width: 100%;
     height: 19em;
 
 }
@@ -128,6 +128,28 @@ section.description
     float: right;
     width: 70%;
 }
+
+.filmtitle .rating {
+    direction: rtl;
+}
+
+.filmtitle .rating a {
+    color: black;
+    text-decoration: none;
+    font-size: 1em;
+    transition: color .4s;
+}
+.filmtitle .rating a:hover,
+.filmtitle .rating a:focus {
+    color: orange;
+    cursor: pointer;
+}
+
+.filmtitle .rating a:hover ~ a,
+.filmtitle .rating a:focus ~ a {
+    color: orange;
+}
+
 
 footer {
   background-color: black;
