--- a/asset/style.css
+++ b/asset/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .wrap {
-    max-width: 1100px;
+    max-width: 1000px;
     width: 100%;
     margin: 0 auto;
 }
@@ -52,10 +52,14 @@ header nav ul li a:hover {
     background-color: darkslateblue;
 }
 
-header nav ul li span .hellouser
+header nav ul li span.hellouser
 {
-  color: lime;
-  background-color: white;
+  color: white;
+  background-color: black;
+  float: left;
+  width: 20%;
+  padding: 15px;
+  text-transform: uppercase;
 }
 
 .account {
@@ -65,6 +69,7 @@ header nav ul li span .hellouser
 /*Contenu principal*/
 
 .movies .filmtitle {
+    padding-top: 20px;
     float: left;
     width: 20%;
 }
@@ -75,6 +80,8 @@ header nav ul li span .hellouser
   background-color: #fff;
   padding: 20px;
   margin: 20px;
+  position: absolute;
+
 }
 
 .filtermoviestitle
@@ -117,42 +124,23 @@ header nav ul li span .hellouser
 }
 
 /*Page detail*/
-section .affiche {
+section.affiche {
     width: 25%;
     float: left;
 
 }
 
 section.affiche img {
+    padding-top: 20px;
     width: 100%;
     height: 50%;
 }
 
 section.description
 {
+    padding-top: 20px;
     float: right;
     width: 70%;
-}
-
-.filmtitle .rating {
-    direction: rtl;
-}
-
-.filmtitle .rating a {
-    color: black;
-    text-decoration: none;
-    font-size: 1em;
-    transition: color .4s;
-}
-.filmtitle .rating a:hover,
-.filmtitle .rating a:focus {
-    color: orange;
-    cursor: pointer;
-}
-
-.filmtitle .rating a:hover ~ a,
-.filmtitle .rating a:focus ~ a {
-    color: orange;
 }
 
 
